bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:3: error: value or is not a member of Boolean
  if (talking & (hour<=7 or hour>=20)) {
                         ^